Add working windows launch configuration